Automatically backed up by Learn

--- a/app/views/pets/edit.erb
+++ b/app/views/pets/edit.erb
@@ -18,8 +18,8 @@
  
   <label>and/or, create a new owner:</label>
   <br>
-  <label>name:</label>
-    <input  type="text" name="owner[name]" id="owner_name"></input>
+  <label>Name:</label>
+    <input type="text" name="owner[name]" id="owner_name"></input>
   <br>
   
   <input type="submit" value="Update Pet">
